--- a/Auth/Views/Account/Create.cshtml
+++ b/Auth/Views/Account/Create.cshtml
@@ -23,6 +23,6 @@
         <button type="submit" class="btn btn-primary">
             Register now
         </button>
-        <a asp-controller="Home" class="btn btn-secondary">Cancel</a>
+        <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
